feat: implement banner UI on homepage

--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "react-multi-carousel": "2.8.5",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.0.2",
+    "react-slick": "^0.30.3",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.1",
     "sweetalert2": "^11.10.5",
@@ -93,6 +95,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8.55.0",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-storybook": "^0.8.0",
