--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-i18next": "^14.1.2",
     "react-multi-carousel": "2.8.5",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-player": "^2.16.0",
     "react-redux": "^9.0.2",
     "react-slick": "^0.30.3",
     "sass": "^1.69.5",
