--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.14.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "@mui/x-data-grid": "^6.18.7",
+    "@mui/x-date-pickers": "^7.23.3",
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.39.0",
     "@tanstack/react-query-devtools": "^5.39.0",
@@ -38,6 +39,7 @@
     "axios": "^1.6.2",
     "axios-mock-adapter": "^1.22.0",
     "chart.js": "^4.4.2",
+    "dayjs": "^1.11.13",
     "draft-js": "0.11.7",
     "draftjs-to-html": "^0.9.1",
     "emoji-picker-react": "^4.9.2",
