--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_API_HOST=http://localhost:3001
+NEXT_PUBLIC_API_HOST=https://spa.nacomcorp.com
+NEXT_PUBLIC_SITE=https://spa.nacomcorp.com
 GOOGLE_SECRET=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
 GOOGLE_CLIENT_ID=150702409010-puv4shi7uai6akaprb5fg01mi7parft2.apps.googleusercontent.com
 FACEBOOK_CLIENT_ID=356170480733691
