--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@casl/ability": "^6.5.0",
     "@casl/react": "^3.1.0",
+    "@devexpress/dx-react-core": "^4.0.10",
+    "@devexpress/dx-react-scheduler": "^4.0.10",
+    "@devexpress/dx-react-scheduler-material-ui": "^4.0.10",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -27,12 +30,16 @@
     "@mui/x-data-grid": "^6.18.7",
     "@mui/x-date-pickers": "^7.23.3",
     "@reduxjs/toolkit": "^2.0.1",
+    "@schedule-x/events-service": "^2.13.0",
+    "@schedule-x/react": "^2.13.0",
+    "@schedule-x/theme-default": "^2.13.0",
     "@tanstack/react-query": "^5.39.0",
     "@tanstack/react-query-devtools": "^5.39.0",
     "@types/draftjs-to-html": "^0.8.4",
     "@types/html-to-draftjs": "^1.4.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/nprogress": "^0.2.3",
+    "@types/react-big-calendar": "^1.16.0",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-draft-wysiwyg": "1.13.4",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
@@ -53,6 +60,7 @@
     "i18next-resources-to-backend": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-i18n-router": "^5.5.0",
@@ -61,6 +69,7 @@
     "prettier": "^3.1.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-big-calendar": "^1.17.1",
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
     "react-datepicker": "^4.24.0",
