--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8.55.0",
