--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "firebase": "^10.11.0",
+    "framer-motion": "^12.6.2",
     "html-to-draftjs": "1.4.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^7.2.0",
