--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.1",
     "sweetalert2": "^11.10.5",
+    "swr": "^2.3.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
