--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,7 +66,7 @@ jobs:
             echo "SITE_URL=${SITE_URL}" >> .env
             echo "NEXTAUTH_URL=${NEXTAUTH_URL}" >> .env
             git pull 
-            npm install -f
+            npm install
             npm run build
 
             if pm2 list | grep -q $APP_NAME; then
